syntax = "proto3";

package notifypb;

message ArticleCreationRequest {
  string address = 1;
  string title = 2;
  string time = 3;
}

message ArticleCreationResponse {
  bool status = 1;
  string result = 2;
}

message UserCreationRequest {
  string address = 1;
  string time = 2;
}

message UserCreationResponse {
  bool status = 1;
  string result = 2;
}

service NotifierService {
  rpc ArticleCreationNotify(ArticleCreationRequest) returns (ArticleCreationResponse) {};
  rpc UserCreationNotify(UserCreationRequest) returns (UserCreationResponse) {};
}